--- a/index.html
+++ b/index.html
@@ -1,72 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conquering Rsponsive Layouts</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-       <div class="container row">
-           <a href="#">
-               <img src="img/logo.svg" alt="logo" class="logo">
-           </a>
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-                </ul>
-                <ul class="nav__list">    
-                    <li class="nav__item nav__item--push-right"><a href="#" class="nav__link">Sign in</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign Up</a></li>
-                </ul>
-            </nav>
-       </div>
+      <div class="container row">
+        <a href="#">
+          <img src="img/logo.svg" alt="logo" class="logo" />
+        </a>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item nav__item--push-right">
+              <a href="#" class="nav__link">Sign in</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link nav__link--button">Sign Up</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    
+
     <section class="hero">
-        <div class="container row">
-            <div class="hero__text">
-                <h1>Responsive layouts don’t have to be a struggle</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <a href="#" class="btn">I want to learn</a>
-            </div>
-            <div>
-                <img src="img/hero-img.jpg" alt="web sketches">
-            </div>
+      <div class="container row">
+        <div class="hero__text">
+          <h1>Responsive layouts don’t have to be a struggle</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+          <a href="#" class="btn">I want to learn</a>
         </div>
+        <div>
+          <img src="img/hero-img.jpg" alt="web sketches" />
+        </div>
+      </div>
     </section>
-<main class="quality">
-        <div class="container row">
-           <section class="quality-text">
-               <h2>Quality designs made custom, on demand, just for you</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-           </section>
-           <aside class="quality-price">
-               <div class="quality-price_cheap">
-                  <h3>Cheap</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                  </p>
-               </div>
-               <div class="quality-price_quick">
-                   <h3>Quick</h3>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> 
-               </div>
-               <div class="quality-price_quality">
-                   <h3>Quality</h3>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-
-               </div>
-           </aside>
-        </div>
-</main>
-
-    
-
-</body>
+    <main class="quality">
+      <div class="container row">
+        <section class="quality-text">
+          <h2>Quality designs made custom, on demand, just for you</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam.
+          </p>
+        </section>
+        <aside class="quality-price">
+          <div class="quality-price_cheap">
+            <h3>Cheap</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+          <div class="quality-price_quick">
+            <h3>Quick</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+          <div class="quality-price_quality">
+            <h3>Quality</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+        </aside>
+      </div>
+    </main>
+  </body>
 </html>
